--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="/estiloscss/estilos.css" />
     <title>CURRICULO</title>
   </head>
   <body>
-    <h1>DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span></h1>
+    <h1 class="formata">
+      DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span>
+    </h1>
 
     <p>
       teste de usabilidade
