DEFININDO ESPAÇAMENTO NO TITULO

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>CURRICULO</title>
   </head>
   <body>
-    <h1 class="formata">
-      DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span>
-    </h1>
-
+    <header class="formata">
+      <h1>DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span></h1>
+    </header>
     <p>
       teste de usabilidade
     </p>
