--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <link rel="stylesheet" type="text/css" href="/estiloscss/estilos.css" />
     <title>CURRICULO</title>
   </head>
+
   <body>
     <header class="formata">
-      <h1>DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span></h1>
+      <div>
+        <h1>DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span></h1>
+      </div>
+
+      <div>
+        <nav class="negacao">
+          <a href="index.html">HOME</a>
+          <a href="contato.html">CONTATO</a>
+          <a href="quem-somos.html">QUEM-SOMOS</a>
+        </nav>
+      </div>
     </header>
+
     <p>
       teste de usabilidade
     </p>
