--- a/index.html
+++ b/index.html
@@ -9,21 +9,18 @@
 
   <body>
     <header class="formata">
-      <div>
-        <h1>DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span></h1>
-      </div>
+      <h1>DESENVOLVENDO UMA PÁGINA <span style="color: blue;">HTML</span></h1>
 
-      <div>
-        <nav class="negacao">
-          <a href="index.html">HOME</a>
-          <a href="contato.html">CONTATO</a>
-          <a href="quem-somos.html">QUEM-SOMOS</a>
-        </nav>
-      </div>
+      <nav class="navegacao">
+        <a href="index.html">HOME</a>
+        <a href="contato.html">CONTATO</a>
+        <a href="quem-somos.html">QUEM-SOMOS</a>
+      </nav>
     </header>
 
     <p>
       teste de usabilidade
     </p>
+    <script type="text/javascript" src="javas/java.js"></script>
   </body>
 </html>
